@@ -561,41 +561,3 @@ emr_ids = {1:Header,2:Polybezier,3:Polygone,4:Polyline,5:PolybezierTo,\
 	#116:'TransparentBlt',118:'GradientFill',119:'SetLinkedUFI',\
 	#120:'SetTextJustification',121:'ColorMatchToTargetW',122:'CreateColorSpaceW'
 	}
-
-def SetBKModeWMF (hd, size, value):
-	iter = hd.hdmodel.append(None, None)
-	hd.hdmodel.set (iter, 0, "Mode", 1, struct.unpack("<H",value[6:8])[0],2,6,3,2,4,"<H")
-
-def SetMapModeWMF (hd, size, value):
-	SetBKModeWMF (hd, size, value)
-	
-def SetROP2WMF (hd, size, value):
-	SetBKModeWMF (hd, size, value)
-	
-def SetPolyfillModeWMF (hd, size, value):
-	SetBKModeWMF (hd, size, value)
-	
-def SetStretchBltModeWMF (hd, size, value):
-	SetBKModeWMF (hd, size, value)
-
-wmr_ids = {
-#1:'Aldus_Header',2:'CLP_Header16',3:'CLP_Header32',4:'Header',
-#30:'SaveDC', 295:'RestoreDC', 332:'ResetDc', 
-#53:'RealizePalette', 55:'SetPalEntries', 247:'CreatePalette', 313:'ResizePalette',564:'SelectPalette', 1078:'AnimatePalette', 
-#79:'StartPage', 80:'EndPage', 82:'AbortDoc', 94:'EndDoc', 333:'StartDoc', 
-#248:'CreateBrush', 322:'DibCreatePatternBrush', 505:'CreatePatternBrush',
-#762:'CreatePenIndirect',763:'CreateFontIndirect', 764:'CreateBrushIndirect', 765:'CreateBitmapIndirect', 
-#496:'DeleteObject', 301:'SelectObject', 
-258:SetBKModeWMF, 259:SetMapModeWMF, 260:SetROP2WMF, 262:SetPolyfillModeWMF, 263:SetStretchBltModeWMF,
-#561:'SetMapperFlags', 
-#264:'SetTextCharExtra', 302:'SetTextAlign', 513:'SetBKColor', 521:'SetTextColor', 522:'SetTextJustification', 
-#298:'InvertRegion', 299:'PaintRegion', 300:'SelectClipRegion',544:'OffsetClipRgn', 552:'FillRegion', 1065:'FrameRegion', 1791:'CreateRegion',
-#1045:'ExcludeClipRect', 1046:'IntersectClipRect',
-#523:'SetWindowOrgEx', 524:'SetWindowExtEx',525:'SetViewportOrgEx', 526:'SetViewportExtEx', 527:'OffsetWindowOrg', 529:'OffsetViewportOrgEx',
-#1040:'ScaleWindowExtEx', 1042:'ScaleViewportExtEx',
-#1049:'FloodFill', 1352:'ExtFloodFill', 1574:'Escape', 
-#531:'LineTo', 532:'MoveTo', 804:'Polygone', 805:'Polyline', 1048:'Ellipse', 1051:'Rectangle', 1055:'SetPixel', 
-#1336:'PolyPolygone', 1564:'RoundRect', 2071:'Arc', 2074:'Pie', 2096:'Chord', 
-#1313:'TextOut', 1583:'DrawText',2610:'ExtTextOut',
-#1790:'CreateBitmap', 1565:'PatBlt', 2338:'BitBlt', 2368:'DibBitblt', 2851:'StretchBlt', 2881:'DibStretchBlt', 3379:'SetDibToDev', 3907:'StretchDIBits'
-}
